[gd_scene load_steps=6 format=3 uid="uid://c4av2v5uvqgia"]

[ext_resource type="Script" path="res://scenes/material_get.gd" id="1_mdcqm"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oyknn"]
load_path = "res://.godot/imported/scrap.png-a07684dbe1e6ace303c715d32f24c0ff.ctex"

[sub_resource type="Gradient" id="Gradient_67hul"]
offsets = PackedFloat32Array(0.469388, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nkpwd"]
load_path = "res://.godot/imported/digits.png-c51107f479d8f5db222b486dd4a1168c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_acsk1"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_nkpwd")
region = Rect2(0, 0, 16, 16)

[node name="MaterialGet" type="Node2D"]
script = ExtResource("1_mdcqm")

[node name="MaterialParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
one_shot = true
texture = SubResource("CompressedTexture2D_oyknn")
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 25)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 0.4
scale_amount_max = 0.4
color_ramp = SubResource("Gradient_67hul")

[node name="QuantityParticle" type="CPUParticles2D" parent="."]
position = Vector2(3, 2)
emitting = false
amount = 1
one_shot = true
texture = SubResource("AtlasTexture_acsk1")
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 25)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 0.25
scale_amount_max = 0.25
color_ramp = SubResource("Gradient_67hul")

[connection signal="finished" from="MaterialParticle" to="." method="_on_material_particle_finished"]
